<resources>
    <string name="app_name">lab1</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_10">10</string>
    <string name="btn_11">11</string>
    <string name="btn_12">12</string>
    <string name="btn_13">13</string>
    <string name="btn_14">14</string>
    <string name="btn_15">15</string>
    <string name="btn_16">16</string>
    <string name="btn_17">17</string>
    <string name="btn_18">18</string>
    <string name="btn_19">19</string>
    <string name="btn_20">20</string>

</resources>