<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="366dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_10" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_11" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_13" />

            <Button
                android:id="@+id/button_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_14" />

            <Button
                android:id="@+id/button_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_15" />

            <Button
                android:id="@+id/button_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_16" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_17" />

            <Button
                android:id="@+id/button_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_18" />

            <Button
                android:id="@+id/button_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_19" />

            <Button
                android:id="@+id/button_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_20" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickBtnCancel"
        android:text="exit"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="40dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:layout_constraintVertical_bias="0.934" />

    <LinearLayout
        android:id="@+id/free_layout"
        android:layout_width="304dp"
        android:layout_height="248dp"
        android:layout_marginTop="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:layout_constraintVertical_bias="0.526"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>